<resources>
    <string name="app_name">Bottom bar with navigation drawer</string>
    <string name="drawer_item_option1"> Training and Placement</string>
    <string name="drawer_item_settings">Career@KEC</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_option2">Departments</string>
    <string name="drawer_item_option3">Campus Life</string>
    <string name="drawer_item_option11"> About Institute</string>
    <string name="drawer_item_option12"> Admissions and Registrations</string>
    <string name="abt"><b>Krishna Engineering College (KEC, Ghaziabad)</b> was established in 2004 by Friends Charitable Society (FCS) Ghaziabad.\nFCS has eminent Businessmen, Industrialists and Professionals as its members.\n FCS members are also associated with other leading Educational Institutions in NCR and other region of UP like <b>Krishna Institute of Engineering and Technology (KIET), Inderprastha Engineering College (IPEC)</b>, and <b>Krishna Dental College (KDC), Krishna Institute of Technology (KIOT), Krishna Girls Engineering College (KGEC), Krishna Institute of Management and Technology (KIMT).</b> \nKEC has been established as an institution for the millennium with a vision to turn out scholars who will be Global Players when they leave the portals of KEC.\n With this vision in the background, the college endeavours to impart core technical knowledge, help students develop requisite soft skills, instil an adaptability for change and builds cross cultural compatibility to its students. \nThe college is approved by <b>AICTE (Ministry of HRD, Government of India)</b> and is affiliated to <b>AKTU, Lucknow</b>.\n Starting with four programmes in B.Tech.,the college currently offers six programmes in B.Tech.(Computer Science and Engineering, Information Technology, Electronics and Communication Engineering, Electrical and Electronics Engineering, Mechanical Engineering and Civil Engineering) with an approved intake of 720 students/year.\n Within a span of 13 years, the college has established its credentials as an institution of repute by figuring among top 20 colleges of over 400 Engineering and Technology Institutions of AKTU in session 2016-17.\n The college infrastructure is a planned endeavour built over a period with care and concern keeping all the needs of a premier Engineering Institution.\n The campus is located in Mohan Nagar, Ghaziabad, next to IAF Station Hindon and is strategically located vis-a-vis Delhi (5 Km from border), Ghaziabad (6 Km), 12 km from Noida and other areas like Vasundhara, Vaishali and Kaushambi.\n The campus is spread over an area of 11 acres with plans for 3 academic blocks covering over 25000 Sq. meter of built up area, 3 Hostels (2 for boys and 1 for Girls) roughly with a capacity of 1000, an Auditorium, workshops, play grounds and quarters for the employees.
</string>
    <string name="admission1">
        For information related to admission/registration :\n

       Please Contact Reception.\n

       (For more information)\n

       Phone : \n
       09999110887\n
       09999110872\n
       0120-2657731\n
       0120-2657732\n
       Telefax : 0120-2659513"</string>
    <string name="nisha">Ms. Nisha Sharma\n

Designation: Soft Skills Trainer\n
Qualification: PGDM, B. Sc.(Mathematics)\n
Total Exp: 7.5 Years\n
Email Id: nisha.sharma@krishnacollege.ac.in</string>
    <string name="shilpi1">
Ms. Shilpi Vaish\n

Designation: Soft Skills Trainer\n
Qualification: PGDBM, B. Tech(IT)\n
Total Exp: 8 Years\n
Email Id: shilpirana27@gmail.com</string>
    <string name="renu">Ms. Renu Gautam (Placement Head)\n

Designation: Head - Placement Department
Qualification: MBA (Marketing)\n
Total Exp: 14.5 Years\n
Contact No: 9999110882, 0120-2657731/32(Ext-137)
Email Id: kecplacementcell@gmail.com</string>
    <string name="vipin">Mr. Vipin Kumar

Designation: Placement Officer
Qualification: MBA (HR and Marketing)
Total Exp: 5.6 Years
Contact No: 7840013391/8285483391
Email Id: placement@krishnacollege.ac.in</string>
    <string name="vision">To create and establish an Institution that will turn out scholars adept at responding to changes brought about by globalization, be they technological, societal or paradigm shifts in business processes. In conclusion, the scholars will be global players in all respects when they leave the portals of Krishna Engineering College.</string>
    <string name="mission">To provide an academic and social environment that will stimulate academic excellence, development of cross cultural adaptability, flowering of soft skills and integrate human values and social concerns among students entering the college.

</string>
    <string name="quality">KEC will strive to build and nurture(for the students):

1.Quality foundation knowledge and core concepts in Engineering.

2.A set of soft skills needed from time to time in a dynamic milieu.

3.Cross cultural awareness and adaptability as a global player.

4.Ability to respond to change effectively be they societal, technological or paradigm shifts in business processes.
</string>
</resources>