<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewtrain"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="Placement Team"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <android.support.v7.widget.CardView
                android:id="@+id/c1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewtrain"
                android:layout_marginTop="15dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp">

                <ImageView
                    android:id="@+id/renu"
                    android:layout_width="120dp"
                    android:layout_height="190dp"
                    android:layout_gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="20dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/renugautam" />

                <TextView
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/renu" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/c2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/c1"
                android:layout_marginTop="17dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp">

                <ImageView
                    android:id="@+id/shilpi"
                    android:layout_width="150dp"
                    android:layout_height="190dp"
                    android:layout_gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="20dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/mshilpi" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingRight="5dp"
                    android:paddingTop="15dp"
                    android:text="@string/shilpi1"
                    android:textAlignment="textStart" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/c3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/c2"
                android:layout_marginTop="13dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp">

                <ImageView
                    android:id="@+id/vipin"
                    android:layout_width="150dp"
                    android:layout_height="190dp"
                    android:layout_gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="20dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/vipin" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingRight="5dp"
                    android:paddingTop="15dp"
                    android:text="@string/vipin"
                    android:textAlignment="textStart" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/c4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/c1"
                android:layout_alignStart="@+id/c1"
                android:layout_below="@+id/c3"
                android:layout_marginTop="15dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp">

                <ImageView
                    android:id="@+id/nisha"
                    android:layout_width="150dp"
                    android:layout_height="190dp"
                    android:layout_gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="20dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/nisha" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingRight="5dp"
                    android:paddingTop="15dp"
                    android:text="@string/nisha"
                    android:textAlignment="textStart" />
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>